add charts page
