# api/swagger.yaml
@@ -15,6 +15,8 @@ tags:
   description: "Campaigns for voting"
 - name: "users"
   description: "Users that are authenticated as voters (Not a completed member system.)"
+- name: "pages"
+  description: "HTML pages for demonstrations"
 schemes:
 - "http"
 paths:
@@ -188,6 +190,19 @@ paths:
             items:
               $ref: "#/definitions/User"
       x-swagger-router-controller: "Users"
+  /pages/charts:
+    get:
+      tags:
+      - "pages"
+      summary: "HTML page"
+      operationId: "getPage"
+      produces:
+      - "text/html"
+      parameters: []
+      responses:
+        "200":
+          description: "HTML page"
+      x-swagger-router-controller: "Pages"
     post:
       tags:
       - "users"
